--- a/StudyNetMVC.WEB/StudyNetMVC.WEB.csproj
+++ b/StudyNetMVC.WEB/StudyNetMVC.WEB.csproj
@@ -368,6 +368,7 @@
     <Content Include="Scripts\Main.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\login.js" />
+    <Content Include="Scripts\site.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
