md5加密处理（后端），优化添加或注册流程

--- a/StudyNetMVC.BLL/StudyNetMVC.BLL.csproj
+++ b/StudyNetMVC.BLL/StudyNetMVC.BLL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService\UserServiceImpl\UserService.cs" />
     <Compile Include="Utils\DataTableHelper.cs" />
+    <Compile Include="Utils\EncryptUtil.cs" />
     <Compile Include="Utils\StringHelper.cs" />
   </ItemGroup>
   <ItemGroup>
