--- a/StudyNetMVC.WEB/StudyNetMVC.WEB.csproj
+++ b/StudyNetMVC.WEB/StudyNetMVC.WEB.csproj
@@ -367,6 +367,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\jquerysession.js" />
     <Content Include="Scripts\Main.js" />
+    <Content Include="Scripts\md5.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\login.js" />
     <Content Include="Scripts\site.js" />
