--- a/StudyNetMVC.WEB/StudyNetMVC.WEB.csproj
+++ b/StudyNetMVC.WEB/StudyNetMVC.WEB.csproj
@@ -370,6 +370,7 @@
     <Content Include="Scripts\md5.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\login.js" />
+    <Content Include="Scripts\modifyPass.js" />
     <Content Include="Scripts\site.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -385,6 +386,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Main.cshtml" />
+    <Content Include="Views\Home\ModifyPass.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
